--- a/index.ipynb
+++ b/index.ipynb
@@ -40,6 +40,335 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "from statsmodels.stats.power import TTestIndPower, TTestPower\n",
+    "power_analysis = TTestIndPower()\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set_style('darkgrid')\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('homepage_actions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8188 entries, 0 to 8187\n",
+      "Data columns (total 4 columns):\n",
+      "timestamp    8188 non-null object\n",
+      "id           8188 non-null int64\n",
+      "group        8188 non-null object\n",
+      "action       8188 non-null object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 256.0+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>id</th>\n",
+       "      <th>group</th>\n",
+       "      <th>action</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-09-24 17:42:27.839496</td>\n",
+       "      <td>804196</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-09-24 19:19:03.542569</td>\n",
+       "      <td>434745</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-09-24 19:36:00.944135</td>\n",
+       "      <td>507599</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-09-24 19:59:02.646620</td>\n",
+       "      <td>671993</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-09-24 20:26:14.466886</td>\n",
+       "      <td>536734</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    timestamp      id       group action\n",
+       "0  2016-09-24 17:42:27.839496  804196  experiment   view\n",
+       "1  2016-09-24 19:19:03.542569  434745  experiment   view\n",
+       "2  2016-09-24 19:36:00.944135  507599  experiment   view\n",
+       "3  2016-09-24 19:59:02.646620  671993     control   view\n",
+       "4  2016-09-24 20:26:14.466886  536734  experiment   view"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df.info())\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "363314    2\n",
+       "368962    2\n",
+       "568156    2\n",
+       "267099    2\n",
+       "322257    2\n",
+       "604441    2\n",
+       "832343    2\n",
+       "344770    2\n",
+       "371595    2\n",
+       "604449    2\n",
+       "256844    2\n",
+       "751587    2\n",
+       "524996    2\n",
+       "525030    2\n",
+       "609072    2\n",
+       "624959    2\n",
+       "506185    2\n",
+       "637193    2\n",
+       "443177    2\n",
+       "632767    2\n",
+       "281261    2\n",
+       "761973    2\n",
+       "400039    2\n",
+       "434522    2\n",
+       "226772    2\n",
+       "674143    2\n",
+       "729442    2\n",
+       "766743    2\n",
+       "493927    2\n",
+       "260886    2\n",
+       "         ..\n",
+       "190376    1\n",
+       "196531    1\n",
+       "374714    1\n",
+       "664162    1\n",
+       "389065    1\n",
+       "344011    1\n",
+       "249813    1\n",
+       "440282    1\n",
+       "786395    1\n",
+       "643143    1\n",
+       "466807    1\n",
+       "530286    1\n",
+       "902988    1\n",
+       "872245    1\n",
+       "747320    1\n",
+       "798521    1\n",
+       "554810    1\n",
+       "474947    1\n",
+       "543045    1\n",
+       "276298    1\n",
+       "642893    1\n",
+       "309098    1\n",
+       "366414    1\n",
+       "229203    1\n",
+       "481110    1\n",
+       "419672    1\n",
+       "448358    1\n",
+       "761703    1\n",
+       "929641    1\n",
+       "196608    1\n",
+       "Name: id, Length: 6328, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.id.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "view     6328\n",
+       "click    1860\n",
+       "Name: action, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.action.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1860"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df.id.value_counts() == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "control       4264\n",
+       "experiment    3924\n",
+       "Name: group, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.group.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exp = df.loc[df.group == 'experiment']\n",
+    "df_ctrl = df.loc[df.group == 'control']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "click_list = list(df.id.loc[df.action == 'click'])\n",
+    "views_list = list(df.id.loc[df.action == 'view'])\n",
+    "\n",
+    "outliers = []\n",
+    "for person in click_list:\n",
+    "    if person in views_list:\n",
+    "        continue\n",
+    "    else:\n",
+    "        outliers.append(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -63,6 +392,196 @@
    "outputs": [],
    "source": [
     "#Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clicks: 928\n",
+      "Views: 2996\n",
+      "Experiment click rate: 0.3097463284379172\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp_cl = len(df.loc[(df.group == 'experiment') & (df.action == 'click')])\n",
+    "exp_view = len(df.loc[(df.group == 'experiment') & (df.action == 'view')])\n",
+    "print(f'Clicks: {exp_cl}\\nViews: {exp_view}\\nExperiment click rate: {exp_cl/exp_view}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clicks: 932\n",
+      "Views: 3332\n",
+      "Control click rate: 0.2797118847539016\n"
+     ]
+    }
+   ],
+   "source": [
+    "ctrl_cl = len(df.loc[(df.group == 'control') & (df.action == 'click')])\n",
+    "ctrl_view = len(df.loc[(df.group == 'control') & (df.action == 'view')])\n",
+    "print(f'Clicks: {ctrl_cl}\\nViews: {ctrl_view}\\nControl click rate: {ctrl_cl/ctrl_view}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Null Hypothesis: control and experiment are identical\n",
+    "\n",
+    "Alternative Hypothesis: experiment mean is greater than control\n",
+    "\n",
+    "alpha = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def welch_t(a, b):\n",
+    "    \"\"\" Calculate Welch's t statistic for two samples. \"\"\"\n",
+    "    numerator = a.mean() - b.mean()\n",
+    "    denominator = np.sqrt(a.var(ddof=1)/len(a) + b.var(ddof=1)/b.size)\n",
+    "    return abs(numerator/denominator)\n",
+    "\n",
+    "def welch_df(a, b):\n",
+    "    \"\"\" Calculate the effective degrees of freedom for two samples. \"\"\"\n",
+    "    num = (a.var(ddof=1)/a.size + b.var(ddof=1)/b.size)**2\n",
+    "    denom = ((a.var(ddof=1)**2) / (((a.size)**2) * (a.size-1))) + ((b.var(ddof=1)**2) / (((b.size)**2) * (b.size-1)))\n",
+    "    return num/denom\n",
+    "\n",
+    "def p_value(a, b, two_sided=False):\n",
+    "    t = welch_t(a,b)\n",
+    "    df = welch_df(a,b)\n",
+    "    p = 1 - stats.t.cdf(t, df)\n",
+    "    if two_sided:\n",
+    "        p += p\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.copy()\n",
+    "df1 = df1[~((df1['id'].isin(click_list)) & (df1['action'].isin(['view'])))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6328 entries, 0 to 8187\n",
+      "Data columns (total 4 columns):\n",
+      "timestamp    6328 non-null object\n",
+      "id           6328 non-null int64\n",
+      "group        6328 non-null object\n",
+      "action       6328 non-null object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 247.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8188"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6328+1860"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['success'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.loc[df1['action'] == 'view', 'success'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1_exp = df1.loc[df1.group == 'experiment']\n",
+    "df1_ctrl = df1.loc[df1.group == 'control']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004466402814337078"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value(df1_exp.success, df1_ctrl.success)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".004 < .05 so we fail to reject the null hypothesis...so it's likely that the experimental version is significantly more effective than the control version"
    ]
   },
   {
@@ -93,11 +612,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "838.0168067226891"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "expected_clicks = len(df1_exp) * df1_ctrl.success.mean()\n",
+    "expected_clicks"
    ]
   },
   {
@@ -110,11 +642,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.568547907005815\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "n = len(df1_exp)\n",
+    "p = df1_ctrl.success.mean()\n",
+    "var = n * p * (1-p)\n",
+    "std = np.sqrt(var)\n",
+    "print(std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.6625360854823588"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual_clicks = sum(df1_exp.success)\n",
+    "z_score = (actual_clicks - expected_clicks) / std\n",
+    "z_score"
    ]
   },
   {
@@ -127,11 +694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00012486528006951198\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "p_val = stats.norm.sf(z_score) #or 1 - stats.norm.cdf(z_score)\n",
+    "print(p_val)"
    ]
   },
   {
@@ -142,7 +719,8 @@
     "\n",
     "Does this result roughly match that of the previous statistical test?\n",
     "\n",
-    "> Comment: **Your analysis here**"
+    "> Comment: **Your analysis here**  \n",
+    "It seems it does give similar results"
    ]
   },
   {
@@ -171,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
